projects/vb6parse/snapshots/parsers/cst/library/arrays/filter/filter_debug_print.snap
---
source: projects/vb6parse/tests/library/arrays/filter.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: CallStatement
      children:
        - kind: Identifier
          text: Debug
        - kind: PeriodOperator
          text: "."
        - kind: PrintKeyword
          text: Print
        - kind: Whitespace
          text: " "
        - kind: ArgumentList
          children:
            - kind: Argument
              children:
                - kind: BinaryExpression
                  children:
                    - kind: StringLiteralExpression
                      children:
                        - kind: StringLiteral
                          text: "\"Found: \""
                    - kind: Whitespace
                      text: " "
                    - kind: Ampersand
                      text: "&"
                    - kind: Whitespace
                      text: " "
                    - kind: BinaryExpression
                      children:
                        - kind: CallExpression
                          children:
                            - kind: Identifier
                              text: UBound
                            - kind: LeftParenthesis
                              text: (
                            - kind: ArgumentList
                              children:
                                - kind: Argument
                                  children:
                                    - kind: CallExpression
                                      children:
                                        - kind: Identifier
                                          text: Filter
                                        - kind: LeftParenthesis
                                          text: (
                                        - kind: ArgumentList
                                          children:
                                            - kind: Argument
                                              children:
                                                - kind: IdentifierExpression
                                                  children:
                                                    - kind: Identifier
                                                      text: items
                                            - kind: Comma
                                              text: ","
                                            - kind: Whitespace
                                              text: " "
                                            - kind: Argument
                                              children:
                                                - kind: IdentifierExpression
                                                  children:
                                                    - kind: Identifier
                                                      text: searchTerm
                                        - kind: RightParenthesis
                                          text: )
                            - kind: RightParenthesis
                              text: )
                        - kind: Whitespace
                          text: " "
                        - kind: AdditionOperator
                          text: +
                        - kind: Whitespace
                          text: " "
                        - kind: NumericLiteralExpression
                          children:
                            - kind: IntegerLiteral
                              text: "1"
        - kind: Newline
          text: "\n"
